# blogr

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUES.md  Makefile  NEWSLETTER_PLUGINS.md  PLAN.md  README.md  cliff.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
blogr-cli/: Cargo.toml  README.md
blogr-cli/src/: config.rs  content.rs  main.rs  project.rs  tui_integration.rs  tui_launcher.rs  utils.rs
blogr-cli/src/commands/: build.rs  config.rs  delete.rs  deploy.rs  edit.rs  init.rs  list.rs  mod.rs  new.rs  newsletter.rs  project.rs  serve.rs  theme.rs
blogr-cli/src/generator/: assets.rs  markdown.rs  mod.rs  search_index.rs  site.rs
blogr-cli/src/newsletter/: api.rs  composer.rs  config.rs  database.rs  fetcher.rs  migration.rs  mod.rs  plugin.rs  sender.rs
blogr-cli/src/newsletter/ui/: approval.rs  mod.rs
blogr-cli/src/templates/email/: base.html  custom.html  post.html
blogr-cli/src/tui/: app.rs  config_app.rs  editor.rs  events.rs  markdown.rs  mod.rs  preview.rs  theme.rs
blogr-cli/static/js/: search.js
blogr-cli/templates/: about.template  github_workflow.template  gitignore.template  readme.template  sample_post.template
blogr-themes/: Cargo.toml  README.md
blogr-themes/src/: lib.rs
blogr-themes/src/brutja/: mod.rs
blogr-themes/src/brutja/assets/: brutja-default.css
blogr-themes/src/brutja/templates/: archive.html  base.html  index.html  post.html  post_card.html  tag.html  tags.html
blogr-themes/src/dark_minimal/: mod.rs
blogr-themes/src/dark_minimal/assets/: style.css
blogr-themes/src/dark_minimal/templates/: base.html  index.html
blogr-themes/src/minimal_retro/: mod.rs
blogr-themes/src/minimal_retro/assets/: style.css
blogr-themes/src/minimal_retro/templates/: archive.html  archive_simple.html  base.html  index.html  index_simple.html  post.html  post_simple.html  tag.html  tags.html
blogr-themes/src/musashi/: EXAMPLE_CONTENT.md  mod.rs
blogr-themes/src/musashi/assets/: style.css
blogr-themes/src/musashi/templates/: base.html  index.html
blogr-themes/src/obsidian/: mod.rs
blogr-themes/src/obsidian/assets/: obsidian-default.css
blogr-themes/src/obsidian/templates/: archive.html  base.html  index.html  index_simple.html  post.html  tag.html  tags.html
blogr-themes/src/slate_portfolio/: mod.rs
blogr-themes/src/slate_portfolio/assets/: style.css
blogr-themes/src/slate_portfolio/templates/: base.html  index.html
blogr-themes/src/terminal_candy/: mod.rs
blogr-themes/src/terminal_candy/assets/: style.css
blogr-themes/src/terminal_candy/templates/: archive.html  base.html  index.html  post.html  tag.html  tags.html
blogr-themes/src/typewriter/: mod.rs
blogr-themes/src/typewriter/assets/: style.css
blogr-themes/src/typewriter/templates/: base.html  index.html
docs/: COMMANDS.md  CONFIGURATION.md  NEWSLETTER.md  NEWSLETTER_API.md  SEARCH.md  TERMINAL_EDITOR.md  THEMES.md
