[workspace]
members = ["blogr-cli", "blogr-themes"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
walkdir = "2.3"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["bahdotsh"]
license = "MIT"
repository = "https://github.com/bahdotsh/blogr"
