[package]
name = "blogr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI static site generator for blogs"

[[bin]]
name = "blogr"
path = "src/main.rs"

[dependencies]
blogr-themes = { version = "0.4.1", path = "../blogr-themes" }
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.24"
crossterm = "0.27"
pulldown-cmark = "0.9"
syntect = "5.0"
tera = "1.19"
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
url = "2.4"
serde_json = "1.0"
serde_yaml = "0.9"
open = "5.0"
urlencoding = "2.1"
strum = { version = "0.27.2", features = ["derive"] }

# Newsletter dependencies
imap = "2.3.0"
native-tls = "0.2"
mailparse = "0.14"
rusqlite = { version = "0.30", features = ["bundled"] }
lettre = "0.11"
html2text = "0.6"
css-inline = "0.11"

[dev-dependencies]
tempfile = "3.8"
