[package]
name = "blogr-themes"
version = "0.4.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Theme system for Blogr static site generator"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
include_dir = "0.7"
ratatui = "0.24"
